--- a/s/se/sea/sears.ca.html
+++ b/s/se/sea/sears.ca.html
@@ -1,13 +1,14 @@
-<!--The following is the downloaded HTML source of the sears.ca privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602235829id_/http%3A//www.sears.ca/e/customerservice/privacy.htm%3Fcm_ven%3Dinside%26cm_cat%3Dhomepage%26cm_pla%3Dbottom_navigation%26cm_ite%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sears.ca privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206234020id_/http%3A//www.sears.ca/e/customerservice/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN" "hmpro6.dtd"><html><head> 
 	 <title>Your Privacy - Sears Canada</title> 
   </head> 
   <body bgcolor="#FFFFFF" text="#000000" link="#000066"> 
-	 <center>
-<!--START of TOP NAVIGATION -->
-
+	 <center> 
+		<table border="0" width="737" cellspacing="0" cellpadding="0"> 
+		  <tbody><tr>
+			 <td width="134" valign="TOP" colspan="3" align="CENTER">
  
   <link href="/e/styles.css" rel="stylesheet" type="text/css"> 
 	 <title></title> 
@@ -24,15 +25,15 @@
 				<form action="http://search.sears.ca/sears/srch"> 
 				  <table width="603" cellpadding="0" cellspacing="0" border="0" height="27" align="LEFT"> 
 					 <tbody><tr> 
-						<td valign="BOTTOM" colspan="10" align="RIGHT" height="27"><img src="/e/ssi/newhpsp-2.gif" width="1" height="27" border="0"><a href="/e/sitemap.htm?cm_ven=inside&amp;cm_pla=top_navigation&amp;cm_ite=site_map" class="nav">Site Map</a> |
-						  <a href="/e/customerservice/index.htm?cm_ven=inside&amp;cm_pla=top_navigation&amp;cm_ite=customer_service" class="nav">Customer Service</a> |
-						  <a href="http://www3.sears.ca/webapp/wcs/stores/servlet/SearsShoppingBasketView_TRANS?storeId=10001&amp;langId=-1&amp;catalogId=10001&amp;cm_ven=inside&amp;cm_pla=top_navigation&amp;cm_ite=shopping_basket" class="nav">Shopping Basket</a><img src="/e/ssi/newhpsp-2.gif" width="5" height="27" border="0"><br><br></td> 
+						<td valign="BOTTOM" colspan="10" align="RIGHT" height="27"><img src="/e/ssi/newhpsp-2.gif" width="1" height="27" border="0"><a href="/e/sitemap.htm" class="nav">Site Map</a> |
+						  <a href="/e/customerservice/index.htm" class="nav">Customer Service</a> |
+						  <a href="http://www3.sears.ca/webapp/wcs/stores/servlet/SearsShoppingBasketView_TRANS?storeId=10001&amp;langId=-1&amp;catalogId=10001" class="nav">Shopping Basket</a><img src="/e/ssi/newhpsp-2.gif" width="5" height="27" border="0"><br><br></td> 
 					 </tr> 
 					 <tr background="/e/ssi/bluebg.jpg"> 
-						<td valign="TOP" class="nav" width="100" height="27" background="/e/ssi/bluebg.jpg" align="RIGHT" colspan="2"><a href="/e/index.htm?cm_ven=inside&amp;cm_pla=top_navigation&amp;cm_ite=home" class="nav">Home</a><img src="/e/ssi/spacer.gif" width="6" height="1"> |<img src="/e/ssi/spacer.gif" width="1" height="17"> </td> 
-						<td valign="TOP" width="135" height="27" colspan="2" align="RIGHT" background="/e/ssi/bluebg.jpg"><img src="/e/ssi/spacer.gif" width="5" height="1"><a href="http://www3.sears.ca/webapp/wcs/stores/servlet/SearsOrderFromCatalogView?storeId=10001&amp;langId=-1&amp;catalogId=1&amp;cm_ven=inside&amp;cm_pla=top_navigation&amp;cm_ite=order_from_catalogue" class="nav">Order from a Catalogue</a><img src="/e/ssi/spacer.gif" width="5" height="1"> |<img src="/e/ssi/spacer.gif" width="1" height="17"></td> 
+						<td valign="TOP" class="nav" width="100" height="27" background="/e/ssi/bluebg.jpg" align="RIGHT" colspan="2"><a href="/e/index.htm" class="nav">Home</a><img src="/e/ssi/spacer.gif" width="6" height="1"> |<img src="/e/ssi/spacer.gif" width="1" height="17"> </td> 
+						<td valign="TOP" width="135" height="27" colspan="2" align="RIGHT" background="/e/ssi/bluebg.jpg"><img src="/e/ssi/spacer.gif" width="5" height="1"><a href="http://www3.sears.ca/webapp/wcs/stores/servlet/SearsOrderFromCatalogView?storeId=10001&amp;langId=-1&amp;catalogId=1" class="nav">Order from a Catalogue</a><img src="/e/ssi/spacer.gif" width="5" height="1"> |<img src="/e/ssi/spacer.gif" width="1" height="17"></td> 
 						<td valign="TOP" width="65" height="27" colspan="2" align="CENTER" background="/e/ssi/bluebg.jpg"><img src="/e/ssi/spacer.gif" width="2" height="1"><a href="/cgi-bin/uncgi/lang.cgi" class="nav">Français</a><img src="/e/ssi/spacer.gif" width="5" height="1"> |<img src="/e/ssi/spacer.gif" width="1" height="17"></td> 
-						<td valign="TOP" width="100" height="27" background="/e/ssi/bluebg.jpg"><img src="/e/ssi/spacer.gif" width="5" height="1"><a href="/e/corporate/index.html?cm_ven=inside&amp;cm_pla=top_navigation&amp;cm_ite=corporate_info" class="nav">Corporate Info</a>
+						<td valign="TOP" width="100" height="27" background="/e/ssi/bluebg.jpg"><img src="/e/ssi/spacer.gif" width="5" height="1"><a href="/e/corporate/index.html" class="nav">Corporate Info</a>
 						  <img src="/e/ssi/spacer.gif" width="5" height="1">|<img src="/e/ssi/spacer.gif" width="1" height="17"></td> 
 						<td valign="TOP" class="nav" width="40" height="27" background="/e/ssi/bluebg.jpg"><img src="/e/ssi/spacer.gif" width="1" height="17">Search</td> 
 						<td background="/e/ssi//bluebg.jpg"> 
@@ -53,12 +54,11 @@
 		  </tr> 
 		</tbody></table></center> 
 
-
-<!--END of TOP NAVIGATION -->
-		<table border="0" width="737" cellspacing="0" cellpadding="0"> 
-		  <tbody><tr> 
+</td>
+		  </tr>
+		  <tr> 
 			 <td width="134" valign="TOP"> 
-<!--START of LEFT NAVIGATION -->
+
 
  
    
@@ -108,53 +108,44 @@ function MM_swapImage() { //v3.0
 	 </tbody></table> 
 
 
-<!--END of LEFT NAVIGATION -->
 			 </td> 
 			 <td width="1" valign="top" bgcolor="#000066"><img src="/e/gfx/spc.gif" width="1" height="15" border="0" alt="spacer"></td>
 <!--START of CONTENT CELL -->
 			 <td valign="TOP"> 
 				<table border="0" width="603" cellpadding="0" cellspacing="0"> 
 				  <tbody><tr> 
-					 <td width="15" valign="TOP"><font size="4">&nbsp;<br>
-						</font></td> 
-					 <td width="588" valign="TOP"><font size="4">&nbsp;<br>
-						</font><font size="4" color="#000066" face="Arial, Helvetica"><b><a name="Privacy">Your Privacy</a></b></font> 
-						<p><font face="Arial, Helvetica" size="2"> Your privacy is
-						  important to us! Sears is committed to respecting your privacy through the
-						  protection of your Personal Information.</font></p> 
-						<p><font face="Arial, Helvetica" size="2">As the collection
-						  of information is facilitated through technological advances such as the
-						  Internet, we have re-established our commitment to protecting your Personal
-						  Information.</font></p> 
-						<p><font face="Arial, Helvetica" size="2">The following
-						  outlines our pledge to you: </font></p> 
+					 <td width="15" valign="TOP">
+						<p></p></td> 
+					 <td width="588" valign="TOP"><span class="bluebold">Your
+						Privacy</span> 
+						<p>Your privacy is important to us! Sears is committed to
+						  respecting your privacy through the protection of your Personal
+						  Information.</p> 
+						<p>As the collection of information is facilitated through
+						  technological advances such as the Internet, we have re-established our
+						  commitment to protecting your Personal Information.</p> 
+						<p>The following outlines our pledge to you: </p> 
 						<ul> 
-						  <li><font face="Arial, Helvetica" size="2"><font size="2" color="#000066" face="Arial, Helvetica"><b>Purpose and Consent:</b></font>
+						  <li><span class="blueboldsmall">Purpose and Consent:</span>
 							 Before collecting your Personal Information, or at the time of collection, we
-							 will explain to you the purpose of collecting it and obtain your <u><a href="/e/info/gconsent.htm#Consent">consent</a></u>.</font></li> 
-						  <li><font face="Arial, Helvetica" size="2"><font size="2" color="#000066" face="Arial, Helvetica"><b>Limiting Collection:</b></font> Our
-							 collection of Personal Information is limited to what is reasonable under the
-							 circumstances and your information will be used only for the purpose for which
-							 it is collected.</font></li> 
-						  <li><font face="Arial, Helvetica" size="2"><font size="2" color="#000066" face="Arial, Helvetica"><b>Security:</b></font> Your Personal
-							 Information is kept confidential and secure and is not disclosed to anyone
-							 outside our group of companies without your consent, unless required by
-							 law.</font></li> 
-						  <li><font face="Arial, Helvetica" size="2"><font size="2" color="#000066" face="Arial, Helvetica"><b>Access:</b></font> You have the
+							 will explain to you the purpose of collecting it and obtain your <u><a href="/e/info/gconsent.htm#Consent">consent</a></u>.</li> 
+						  <li><span class="blueboldsmall">Limiting Collection:</span>
+							 Our collection of Personal Information is limited to what is reasonable under
+							 the circumstances and your information will be used only for the purpose for
+							 which it is collected.</li> 
+						  <li><span class="blueboldsmall">Security:</span> Your
+							 Personal Information is kept confidential and secure and is not disclosed to
+							 anyone outside our group of companies without your consent, unless required by
+							 law.</li> 
+						  <li><span class="blueboldsmall">Access:</span> You have the
 							 right to access your own Personal Information, and to correct any
-							 inaccuracies.</font></li> 
-						</ul> 
-						<table width="430" cellpadding="0" cellspacing="0"> 
-						  <tbody><tr> 
-							 <td> 
-								<p align="RIGHT"><font color="#000033" size="1" face=" Arial, Helvetica"><a href="javascript:history.go(-1)">Back</a></font></p></td> 
-						  </tr> 
-						</tbody></table> </td> 
+							 inaccuracies.</li> 
+						</ul> <br> </td> 
 				  </tr> 
 				</tbody></table> </td> 
 		  </tr> 
 		  <tr> 
-			 <td valign="TOP" colspan="3" align="CENTER"> &nbsp;
+			 <td valign="TOP" colspan="3" align="CENTER"> 
  
    
 	 <title></title>
@@ -170,21 +161,26 @@ function MM_swapImage() { //v3.0
 					 <table width="737" border="0" cellspacing="0" cellpadding="0"> 
 						<tbody><tr bgcolor="#003366"> 
 						  <td width="115" height="32" align="LEFT"> 
-							 <div align="left"><img src="/e/ssi/spacer.gif" width="10" height="8"><a href="/e/services/index.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=our_services" class="links_large_two">Our Services</a><br>
-								<img src="/e/ssi/spacer.gif" width="18" height="1"><a href="/e/services/index.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=our_services" class="links_two">our full selection</a></div></td> 
+							 <div align="left"><img src="/e/ssi/spacer.gif" width="10" height="8"><a href="/e/services/index.htm" class="links_large_two">Our
+								Services</a><br> <img src="/e/ssi/spacer.gif" width="18" height="1"><a href="/e/services/index.htm" class="links_two">our full
+								selection</a></div></td> 
 						  <td width="106" align="LEFT"> 
-							 <div align="center"><a href="/e/specialty/index.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=specialty_shops" class="links_large_two">Specialty Shops</a><br>
-								<a href="/e/specialty/index.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=specialty_shops" class="links_large_two">&amp; Brands</a>&nbsp;&nbsp;&nbsp;&nbsp;</div></td> 
+							 <div align="center"><a href="/e/specialty/index.htm" class="links_large_two">Specialty Shops</a><br>
+								<a href="/e/specialty/index.htm" class="links_large_two">&amp;
+								Brands</a>&nbsp;&nbsp;&nbsp;&nbsp;</div></td> 
 						  <td width="142" align="LEFT"> 
-							 <div align="left"><img src="/e/ssi/spacer.gif" width="20" height="8"><a href="/e/serv/serv.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=financial_services" class="links_large_two">Sears Canada</a><br>
-								<img src="/e/ssi/spacer.gif" width="20" height="1"><a href="/e/serv/serv.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=financial_services" class="links_large_two">Financial Services</a></div></td> 
-						  <td width="106" align="LEFT" colspan="2"><img src="/e/ssi/spacer.gif" width="4" height="8"><a href="/e/giftcentral/giftcentral.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=gift_services" class="links_large_two">Gift Central</a><br>
-							 <img src="/e/ssi/spacer.gif" width="10" height="1"><a href="/e/giftcentral/giftcentral.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=gift_services" class="links_two">registry &amp; more</a> </td> 
+							 <div align="left"><img src="/e/ssi/spacer.gif" width="20" height="8"><a href="/e/serv/serv.htm" class="links_large_two">Sears
+								Canada</a><br> <img src="/e/ssi/spacer.gif" width="20" height="1"><a href="/e/serv/serv.htm" class="links_large_two">Financial
+								Services</a></div></td> 
+						  <td width="106" align="LEFT" colspan="2"><img src="/e/ssi/spacer.gif" width="4" height="8"><a href="/e/giftcentral/giftcentral.htm" class="links_large_two">Gift
+							 Central</a><br> <img src="/e/ssi/spacer.gif" width="10" height="1"><a href="/e/giftcentral/giftcentral.htm" class="links_two">registry &amp; more</a>
+							 </td> 
 						  <td width="150" colspan="2" align="LEFT"><img src="/e/ssi/spacer.gif" width="2" height="8"><a href="http://www.searsrewards.ca/eflyer/eflyer.cfm?ec=20" class="links_large_two" onclick="cmPageviewOnClick('WISFY bottom nav')">What's
 							 in Store for You?</a><br> <img src="/e/ssi//spacer.gif" width="2" height="1"><a href="http://www.searsrewards.ca/prefcentre/auth/ipc/editpreferences.cfm?ec=20" class="links_two" onclick="cmPageviewOnClick('WISFY bottom nav')">Sign up for
 							 email newsletter</a></td> 
-						  <td width="118"><img src="/e/ssi//spacer.gif" width="10" height="1"><a href="/e/customerservice/freedel.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=free_shipping" class="links_large_two">Free Shipping*</a><br>
-							 <img src="/e/ssi//spacer.gif" width="2" height="1"><a href="/e/customerservice/freedel.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=free_shipping" class="links_two">to most Sears locations</a></td> 
+						  <td width="118"><img src="/e/ssi//spacer.gif" width="10" height="1"><a href="/e/customerservice/freedel.htm" class="links_large_two">Free Shipping</a><br>
+							 <img src="/e/ssi//spacer.gif" width="2" height="1"><a href="/e/customerservice/freedel.htm" class="links_two">to most Sears
+							 locations</a></td> 
 						</tr> 
 					 </tbody></table></td> 
 				</tr> 
@@ -194,23 +190,19 @@ function MM_swapImage() { //v3.0
 						<tbody><tr> 
 						  <td width="737" height="26"> 
 							 <center><font size="1" color="#000000" face="Arial, Helvetica">
-								<a class="bottom" href="/e/customerservice/orderacatalogue.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=request_catalogue">request
-								a catalogue</a> |
-								<a class="bottom" href="/e/contact/contact.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=contact_us">contact
-								us</a> |
-								<a href="/e/contact/searsloc.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=store_finder" class="bottom">store finder</a> |
-								<a class="bottom" href="/e/customerservice/security.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=security">security</a>
-								&amp;
-								<a class="bottom" href="/e/customerservice/privacy.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=privacy">privacy</a>
-								|
+								<a class="bottom" href="/e/customerservice/orderacatalogue.htm">request a
+								catalogue</a> | <a class="bottom" href="/e/contact/contact.htm">contact us</a>
+								| <a href="/e/contact/searsloc.htm" class="bottom">store finder</a> |
+								<a class="bottom" href="/e/customerservice/security.htm">security</a> &amp;
+								<a class="bottom" href="/e/customerservice/privacy.htm">privacy</a> |
 								<a class="bottom" href="http://www.sears.com" onclick="cmPageviewOnClick('sears com bottom nav')">sears.com</a> |
-								<a class="bottom" href="/e/contest/contest.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=contests">contests</a></font></center>
+								<a class="bottom" href="/e/contest/contest.htm">contests</a></font></center>
 							 </td> 
 						</tr> 
 						<tr align="center"> 
 						  <td width="737" height="30"><font size="1" color="#000000" face="Arial, Helvetica">Copyright © 2004, Sears Canada Inc. All rights
-							 reserved.<br> Call Toll-Free 24 hours a day 1-800-26-SEARS <br><a class="bottom" href="/e/customerservice/terms.htm?cm_ven=inside&amp;cm_cat=homepage&amp;cm_pla=bottom_navigation&amp;cm_ite=terms_conditions">
-							 Legal Terms and Conditions</a></font></td> 
+							 reserved.<br> Call Toll-Free 24 hours a day 1-800-26-SEARS <br><a class="bottom" href="/e/customerservice/terms.htm"> Legal Terms and
+							 Conditions</a> | <a class="bottom" href="/e/customerservice/ordering.htm">Pricing Policy </a></font></td> 
 						</tr> 
 					 </tbody></table> </td> 
 				</tr> 
@@ -219,7 +211,7 @@ function MM_swapImage() { //v3.0
 	 </tbody></table> 
 
 
-				&nbsp;</td> 
+			 </td> 
 		  </tr> 
 		</tbody></table> </center> <!-- BEGIN COREMETRICS SUPPORT -->
 <script language="javascript1.1">
@@ -247,7 +239,8 @@ var cmJv="1.5";
  cmSetProduction();
  cmCreatePageviewTag();
 //-->
-</script><img width="1" height="1" src="https://data.coremetrics.com/eluminate?tid%3D1%26ci%3D90020943%26vn2%3De3.1%26pi%3Dweb/20040602235829id_/http%25253A//www.sears.ca/e/customerservice/privacy.htm%25253Fcm_ven%25253Dinside%252526cm_cat%25253Dhomepage%252526cm_pla%25253Dbottom_navigation%252526cm_ite%25253Dprivacy%26vn1%3De3.1%26rnd%3D206329%26ul%3Dhttps%253A//web.archive.org/web/20040602235829id_/http%25253A//www.sears.ca/e/customerservice/privacy.htm%25253Fcm_ven%25253Dinside%252526cm_cat%25253Dhomepage%252526cm_pla%25253Dbottom_navigation%252526cm_ite%25253Dprivacy%26ts%3DYes%26tp%3DYes">
+</script><img width="1" height="1" src="https://data.coremetrics.com/eluminate?tid%3D1%26ci%3D90020943%26vn2%3De3.1%26pi%3Dweb/20041206234020id_/http%25253A//www.sears.ca/e/customerservice/privacy.htm%26vn1%3De3.1%26rnd%3D206253%26ul%3Dhttps%253A//web.archive.org/web/20041206234020id_/http%25253A//www.sears.ca/e/customerservice/privacy.htm%26ts%3DYes%26tp%3DYes">
 <!-- END COREMETRICS -->
+  
 
 </body></html>
