--- a/e/ed/edp/edp24.co.uk.html
+++ b/e/ed/edp/edp24.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the edp24.co.uk privacy policy that was archived on 2004-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040621173238id_/http%3A//www.edp24.co.uk/asp/Privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the edp24.co.uk privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206234325id_/http%3A//www.edp24.co.uk/asp/Privacy.asp) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/Default.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -42,7 +42,7 @@
         <tbody><tr> 
           <td width="190"><a href="/default.asp"><img src="/Assets/img/Logos/edp24.gif" width="190" height="60" border="0"></a></td>
           <td width="468">
-            <center><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=4,0,0,0" width="468" height="60"><param name="movie" value="http://adverts.ecn.co.uk/banners/dpmobio_banner.swf?clickTAG=http://adserver.ecn.co.uk/admentorredir.asp?id=1760&amp;way=ban&amp;host=www%2Eedp24%2Eco%2Euk"><param name="quality" value="high"><embed src="http://adverts.ecn.co.uk/banners/dpmobio_banner.swf?clickTAG=http://adserver.ecn.co.uk/admentorredir.asp?id=1760&amp;way=ban&amp;host=www%2Eedp24%2Eco%2Euk" quality="high" width="468" height="60" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></object></center></td>
+            <center><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=4,0,0,0" width="468" height="60"><param name="movie" value="http://adverts.ecn.co.uk/banners/2058FARMERSEGGbanner.swf?clickTAG=http://adserver.archant.co.uk/admentorredir.asp?id=2058&amp;way=ban&amp;host=www%2Eedp24%2Eco%2Euk"><param name="quality" value="high"><embed src="http://adverts.ecn.co.uk/banners/2058FARMERSEGGbanner.swf?clickTAG=http://adserver.archant.co.uk/admentorredir.asp?id=2058&amp;way=ban&amp;host=www%2Eedp24%2Eco%2Euk" quality="high" width="468" height="60" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></object></center></td>
           <td width="112" align="right">
             <table width="105" border="0" cellspacing="0" cellpadding="0">
 <script language="JavaScript">
@@ -88,9 +88,9 @@ function Send() {
           <td width="400" class="DefaultTextSmall" align="left" valign="top"><b>&nbsp;The 
             site where Norfolk really matters</b></td>
           <td width="370" class="DefaultTextSmall" align="right" valign="top"><b>
-            Monday, June 21, 2004
+            Monday, December 06, 2004
             | 
-            18:35
+            23:46
             </b>&nbsp;</td>
         </tr>
       </tbody></table>
@@ -110,337 +110,175 @@ function Send() {
     <td width="130" valign="top"> 
 
       <table width="130" border="0" cellpadding="0" cellspacing="2">
-
-        <tbody><tr> 
-
-          <td height="46"> <div align="left"> 
-
-              <table width="100%" border="0" cellpadding="4">
-
-                <tbody><tr> 
-
-                  <td> 
-
-                    <p><a href="/Content/Search/nfdetail.asp?Brand=EDPOnline&amp;Category=News&amp;ItemId=NOED04+Jul+2003+17%3A19%3A40%3A410&amp;archive=1"><img src="/assets/img/edpwinner.gif" width="122" height="40" border="0" alt="UKPG Website of the Year 2003"></a></p>
-
-                    </td>
-
-                </tr>
-
-              </tbody></table>
-
-            </div></td>
-
+        <tbody><tr>
+          <td><a href="http://new.edp24.co.uk/content/news/story.aspx?brand=EDPOnline&amp;category=News&amp;tBrand=EDPOnline&amp;tCategory=news&amp;itemid=NOED15%20Oct%202004%2011%3A52%3A19%3A563"><img src="/assets/img/edpwinner.gif" alt="Website of the year 2004" width="122" height="40" border="0"></a></td>
         </tr>
-
         <tr> 
-
-          <td height="6"><img src="/assets/img/blanks/666666.gif" width="100" height="1"></td>
-
-        </tr>
-
-        <tr> 
-
           <td><a href="/default.asp" class="Nav">Home</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/content/News/NewsHome.asp" class="Nav">News</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/content/Sport/SportHome.asp" class="Nav">Sport</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="http://business.edp24.co.uk" class="Nav">Business</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/WhatsOn/WhatsOnHome.asp" class="Nav">What's On 
-
             </a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Access/AccessHome.asp" class="Nav">Text Only</a></td>
-
         </tr>
-
         <tr> 
-
           <td height="6"><img src="/assets/img/blanks/666666.gif" width="100" height="1"></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/About_Us/AboutUsHome.asp" class="Nav">About Us 
-
             </a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Advertising/newspapershome.asp" class="Nav">Advertising</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Auctions/default.asp" class="Nav">Auctions</a></td>
-
         </tr>
-
         <tr> 
-
+          <td><a href="http://new.edp24.co.uk/edp24/shopping/misc/default.aspx?productid=4028" class="Nav">Calendar 
+            2005 </a></td>
+        </tr>
+        <tr> 
           <td><a href="/Content/Campaigns/BreastCancerAppeal/BreastCancerHome.asp" class="Nav">Cancer 
-
             Appeal</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/cards/galleries.asp?bid=dp&amp;gid=1" class="Nav">Cards</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="http://new.edp24.co.uk/content/classifieds/Default.aspx" class="Nav">Classifieds</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Columnists/ColumnistsHome.asp" class="Nav">Columnists</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Community/CommunityHome.asp" class="Nav">Community</a></td>
-
         </tr>
-
         <tr> 
-
+          <td><a href="http://www.edp24.co.uk/dating/" class="Nav">Dating</a></td>
+        </tr>
+        <tr> 
           <td><a href="/Content/EatingOut/EatingOutHome.asp" class="Nav">Eating 
-
             Out</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Campaigns/Environment/Default.asp" class="Nav">Environment</a></td>
-
         </tr>
-
         <tr> 
-
-          <td><a href="/Content/Forums/ExPatsHome.asp" class="Nav">Ex-Pats</a></td>
-
+          <td><a href="http://new.edp24.co.uk/content/everything/diss/" class="Nav">Everything 
+            Diss </a></td>
         </tr>
-
         <tr> 
-
           <td><a href="/Content/FamilyNotices/default.asp" class="Nav">Family 
-
             Notices</a></td>
-
         </tr>
-
         <tr> 
-
-          <td><a href="/Content/FarmersMarket/FoodAwards/FoodAwards.asp" class="Nav">Food 
-
-            Awards 2004 </a></td>
-
-        </tr>
-
-        <tr> 
-
           <td><a href="/Content/FarmersMarket/farmers.asp" class="Nav">Farmers' 
-
             Market </a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/FarmersMarket/FarmNewsHome.asp" class="Nav">Farming 
-
             News</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Features/FeaturesHome.asp" class="Nav">Features</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Feedback/default.asp" class="Nav">Feedback</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="http://new.edp24.co.uk/forums/" class="Nav">Forums</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Frontline/default.asp" class="Nav">Frontline</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/HiddenNorfolk/default.asp" class="Nav">Hidden 
-
             Norfolk </a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/InfoDesk/InfoDeskHome.asp" class="Nav">Info Desk 
-
             </a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Jobs/JobsHome.asp" class="Nav">Jobs</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Leisure/LeisureHome.asp" class="Nav">Leisure</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Links/default.asp" class="Nav">Links</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Motors/MotorsHome.asp" class="Nav">Motors</a></td>
-
         </tr>
-
         <tr> 
-
+          <td><a href="/content/whatson/minisites/NextBigThing" class="Nav">Next 
+            Big Thing</a></td>
+        </tr>
+        <tr> 
+          <td><a href="http://www.norfolkroots24.co.uk" class="Nav">Norfolk Roots 
+            </a></td>
+        </tr>
+        <tr> 
           <td><a href="/Content/Obituaries/ObituariesHome.asp" class="Nav">Obituaries</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="http://new.edp24.co.uk/edp24/shopping/photoSales/" class="Nav">Photosales</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Postcard_From/Default.asp" class="Nav">Postcard 
-
             From</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/asp/Privacy.asp" class="Nav">Privacy </a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Property/PropertyHome.asp" class="Nav">Property</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Promotion/PuppyWatch/pup_home.asp?Puppy=EDP" class="Nav">Puppy 
-
             Watch </a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Leisure/Quiz/QuizHome.asp" class="Nav">Quizzes</a></td>
-
         </tr>
-
         <tr> 
-
+          <td><a href="http://new.edp24.co.uk/edp24/shopping/readertravel " class="Nav">Reader 
+            Travel </a></td>
+        </tr>
+        <tr> 
           <td><a href="/Content/Leisure/Recipes/recipesHome.asp" class="Nav">Recipes</a></td>
-
         </tr>
-
-        <tr><td><a href="/Content/WhatsOn/Reviews/ReviewsHome.asp" class="Nav">Reviews</a></td>
-
+        <tr><td><a href="/Content/WhatsOn/WhatsOnReviews.asp" class="Nav">Reviews</a></td>
         </tr>
-
         <tr> 
-
           <td><a href="/search/Default.aspx" class="Nav">Search</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/Content/Features/SpookyNorfolk/default.asp" class="Nav"> 
-
             Spooky Norfolk</a></td>
-
         </tr>
-
         <tr> 
-
           <td><a href="/asp/Terms.asp" class="Nav"> Terms </a></td>
-
         </tr>
-
         <tr> 
-
-          <td><a href="http://new.edp24.co.uk/edp24/shopping/readertravel/" class="Nav">Travel 
-
-            Offers</a></td>
-
-        </tr>
-
-        <tr> 
-
           <td><a href="/Content/Leisure/Walks/WalksHome.asp" class="Nav">Walks</a></td>
-
         </tr>
-
+        <tr> 
+          <td><a href="/content/your_rubbish/" class="Nav">Your Rubbish </a></td>
+        </tr>
       </tbody></table>
 
     </td>
@@ -478,7 +316,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <tbody><tr> 
           <td height="10"><img src="/Assets/img/Blanks/transparent.gif" width="5" height="10"></td>
         </tr>
-        <tr>
+        <tr> 
           <td><a href="#" onclick="MM_openBrWindow('/SMS/TxtEd.asp','TxtTheEditor','width=250,height=230')" class="TextSmall"><font color="#CE0000"><b>Text 
             The Editor</b></font></a></td>
         </tr>
@@ -556,8 +394,10 @@ else {return false}
         </tr>
         <tr> 
           <td><a href="/Content/About_Us/asp/ContactsDelivery.asp" class="TextSmall">Deliveries</a></td>
-        </tr><tr> 
-          <td><a href="/Content/About_Us/asp/ContactsDeliverers.asp" class="TextSmall">Deliver the paper</a></td>
+        </tr>
+        <tr> 
+          <td><a href="/Content/About_Us/asp/ContactsDeliverers.asp" class="TextSmall">Deliver 
+            the paper</a></td>
         </tr>
         <tr> 
           <td height="10"><img src="/Assets/img/Blanks/transparent.gif" width="5" height="10"></td>
@@ -586,6 +426,10 @@ else {return false}
         </tr>
         <tr> 
           <td class="TextSmall"><b>Advertise:</b></td>
+        </tr>
+        <tr> 
+          <td><a href="http://new.edp24.co.uk/edp24/shopping/tradeAds/" class="TextSmall">Book 
+            your trade ad</a></td>
         </tr>
         <tr> 
           <td><a href="/Content/Advertising/NewspapersHome.asp" class="TextSmall">Newspapers</a></td>
@@ -686,7 +530,7 @@ else {return false}
           <td></td>
         </tr>
         <tr> 
-          <td></td>
+          <td><center><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=4,0,0,0" width="120" height="60"><param name="movie" value="http://adverts.ecn.co.uk/tiles/1626FARMERSEGGComtile.swf?clickTAG=http://adserver.archant.co.uk/admentorredir.asp?id=1626&amp;way=ban&amp;host=www%2Eedp24%2Eco%2Euk"><param name="quality" value="high"><embed src="http://adverts.ecn.co.uk/tiles/1626FARMERSEGGComtile.swf?clickTAG=http://adserver.archant.co.uk/admentorredir.asp?id=1626&amp;way=ban&amp;host=www%2Eedp24%2Eco%2Euk" quality="high" width="120" height="60" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></object></center></td>
         </tr>
       </tbody></table>
     </td>
@@ -918,8 +762,8 @@ window.onload=regenerate2
                       <td class="Text"> 
                         <p> </p><p class="Headline1">Privacy statement for Archant Regional websites</p>
 <p><strong>Our privacy policy</strong><br>
-  Archant Regional is committed to respecting your privacy. This statement sets out how 
-  Archant Regional's websites comply with European Community data protection requirements. 
+  Archant is committed to respecting your privacy. This statement sets out how 
+  Archant Regional websites comply with European Community data protection requirements. 
   We are registered under the Data Protection Act 1998.<br>
   This privacy statement applies to this website only – it does not cover 
   other websites to which we may provide links, or to Archant websites other than 
@@ -979,7 +823,7 @@ window.onload=regenerate2
   as an individual. For example cookies are used for membership details on the 
   property, jobs and business sections.</p>
 <p><strong>Do you gather any other information?</strong><br>
-RedSheriff, an independent measurement and research company, gathers non-personal data regarding the visitors to our site on our behalf using cookies and code. Both the cookies and the embedded code provide non-personal statistical information about visits to pages on the site, the duration of individual page view, paths taken by visitors through the site, data on visitors' screen settings and other general information. Archant uses this type of information, as with that obtained from other cookies used on the site, to help it improve the services to its users.</p> <br>
+Nielson Net Ratings, an independent measurement and research company, gathers non-personal data regarding the visitors to our site on our behalf using cookies and code. Both the cookies and the embedded code provide non-personal statistical information about visits to pages on the site, the duration of individual page view, paths taken by visitors through the site, data on visitors' screen settings and other general information. Archant uses this type of information, as with that obtained from other cookies used on the site, to help it improve the services to its users.</p> <br>
                         <p></p>
                       </td>
                     </tr>
